# Fullstack

./: .gitignore  Makefile  README.md  backend.example.env  docker-compose.yaml  pgsql.Dockerfile
backend/: backend.Dockerfile  backend.env  package-lock.json  package.json  tsconfig.json
backend-axum/: Cargo.toml  README.md  axum.Dockerfile
backend-axum/src/: lib.rs  main.rs
backend-axum/src/api/: mod.rs
backend-axum/src/api/docs/: mod.rs
backend-axum/src/api/middlewares/: auth.rs  cors.rs  mod.rs
backend-axum/src/api/routes/: auth.rs  hello_world.rs  mod.rs  places.rs  users.rs
backend-axum/src/config/: mod.rs
backend-axum/src/lib/: mod.rs
backend-axum/src/lib/axum_/: body_validator.rs  error.rs  extract.rs  filters.rs  mod.rs  multipart.rs  not_found.rs  validators.rs
backend-axum/src/lib/clients/: mod.rs  pgsql.rs
backend-axum/src/lib/types_/: errors.rs  filters.rs  mod.rs  pagination.rs
backend-axum/src/lib/utils/: axum.rs  helpers.rs  json.rs  mod.rs
backend-axum/src/lib/validator_/: filters.rs  mod.rs  regex.rs  rules.rs  utils.rs
backend-axum/src/lib_/: mod.rs
backend-axum/src/lib_/axum_/: body_validator.rs  error.rs  extract.rs  filters.rs  mod.rs  multipart.rs  validators.rs
backend-axum/src/lib_/clients/: hugging_face.rs  mod.rs  pgsql.rs  redis_.rs  storage.rs
backend-axum/src/lib_/seaorm_/: base_model.rs  mod.rs
backend-axum/src/lib_/types_/: errors.rs  filters.rs  mod.rs  pagination.rs  upload.rs
backend-axum/src/lib_/utils/: axum.rs  json.rs  mod.rs
backend-axum/src/lib_/validator_/: filters.rs  mod.rs  regex.rs  rules.rs  utils.rs
backend-axum/src/models/: mod.rs
backend-axum/src/models/migrations/: 20260417170239_init.sql  atlas.hcl  atlas.sum
backend-axum/src/models/orm/: mod.rs  place.rs  place.sql  places.sql  user.rs  users.sql
backend-axum/src/models/schemas/: auth.rs  mod.rs  place.rs  user.rs
backend-axum/src/services/: instances.rs  mod.rs  setup.rs
backend-axum/src/static_/: mod.rs
backend-axum/src/tests/: dummy.rs
backend-axum/src/types/: http.rs
backend-express/: .prettierignore  README.md  eslint.config.js  eslint.config.mjs  express.Dockerfile  package-lock.json  package.json  tsconfig.json
backend-fastapi/: Procfile  README.md  config.py  fastapi.Dockerfile  mypy.ini  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
backend-gin/: .air.toml  README.md  api.go  app.go  gin.Dockerfile  go.mod  go.sum
backend_fastapi/: fastapi.Dockerfile
express/: express.Dockerfile  express.env  jest.config.js  package-lock.json  package.json  tsconfig.json
fastapi/: config.py  fastapi.Dockerfile  requirements.txt
frontend-react/: README.md  eslint.config.js  index.html  package-lock.json  package.json  react.Dockerfile  tsconfig.app.json
frontend-svelte/: .prettierrc  README.md  eslint.config.ts  index.html  package-lock.json  package.json  svelte.Dockerfile  tsconfig.app.json  (+1 more)
(+923 files in other folders)
