[package]
default-run = "backend-axum"
name = "backend-axum"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "backend-axum"
path = "src/main.rs"

[dependencies]
# Axum
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# Schemas
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.18", features = ["derive"] }
utoipa = { version = "5", features = ["macros"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
utoipa-axum = "0.2"

# Rust Tools
once_cell = { version = "1.21.3" }
regex = { version = "1.12.2" }
